kubernetes/ckad/webapp/webapp-wear/webapp-wear-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: webapp
  name: webapp-wear-service
spec:
  selector:
    app: webapp-wear
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
